feat: add background image

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Congreso Hacedores</title>
   </head>
-  <body background="in_posible_fondo_web.png">
+  <body id="body" background="in_posible_fondo_web.png">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
